Fix overflow

--- a/ibeto-front-end/src/components/stylesheet/Contact.css
+++ b/ibeto-front-end/src/components/stylesheet/Contact.css
@@ -1,4 +1,4 @@
-* {
+/** {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
     background: rgb(223,223,223);
     font-family: 'PT Sans', sans-serif;
-}
+}*/
 
 .profile-container {
     display: flex;
